# precommit-sync-files

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  TESTING.md  pyproject.toml  ruff.toml  test_quick.sh
docs/: design-doc.md
precommit_sync_files/: __init__.py  cli.py  exceptions.py  git_repo.py  log.py  sync.py
